--- a/css/main.css
+++ b/css/main.css
@@ -199,3 +199,219 @@ body{
 .section-blok-box:nth-child(4) .section-blok-text{
 	padding: 0 177px 0 94px;
 }
+.coffe-choose-wrapper{
+	height: 900px;
+}
+.section-coffe-choose{
+	height: 703px;
+	margin: 20px 20px 0 20px;
+	background-image: url("../images/bg-orange.jpg");
+	background-size: contain;
+	background-position: center;
+}
+.choose-wrapper h2{
+	padding-top: 50px;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-size: 50px;
+	line-height: 59px;
+	text-align: center;
+	color: #FFFFFF;
+}
+.choose-blok{
+	position: relative;
+}
+.choose-text{
+	padding-top: 10px;
+	width: 555px;
+	margin: 0 auto;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 28px;
+	text-align: center;
+	color: #FFFFFF;
+	opacity: 0.8;
+	}
+	.choose-list{
+		position: absolute;
+		top: 90px;
+		left: 0;
+		display: flex;
+		list-style: none;
+	}
+	.choose-item{
+		position: relative;
+		padding-top: 28px;
+		width: 377px;
+		font-weight: 500;
+		font-size: 30px;
+		line-height: 35px;
+		color: #333333;
+	}
+	.choose-item:nth-child(1)::before{
+		content: "";
+		position: absolute;
+		top: -13px;
+		left: -42px;
+		width: 128px;
+		height: 135px;
+		background-image: url("../images/text.svg");
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+	.choose-item:nth-child(2){
+		margin: 0 105px;
+	}
+	.choose-item h3{
+		padding-top: 28px;
+	}
+	.choose-item p{
+		padding-top: 10px;
+		font-weight: 400;
+		font-size: 18px;
+		line-height: 28px;
+		color: #333333;
+	}
+	.section-pick{
+		/* height: 703px; */
+		margin: 140px 20px 50px 20px;
+		background-image: url("../images/bg-green.jpg");
+		background-size: contain;
+		background-position: center;
+	}
+	.pick-text{
+		text-transform: uppercase;
+		padding-top: 50px;
+		font-weight: 700;
+		font-size: 50px;
+		line-height: 59px;
+		text-align: center;
+		color: #fff;
+	}
+	.line{
+		margin-top: 80px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		width: 1000px;
+		height: 2px;
+		background-image: url("../images/line.svg");
+		background-size: 950px ;
+		background-position: left;
+		background-repeat: no-repeat;
+	}
+	.line span{
+		width: 60px;
+		height: 60px;
+		background: #F8F8F2;
+		border: 4px solid #C99B67;
+	}
+	.section-pick-blok{
+		padding-top: 50px;
+		display: flex;
+		justify-content: space-between;
+	}
+	.pick-box{
+		position: relative;
+		width: 433px;
+		height: 396px;
+		background: #F8F8F2;
+		padding: 20px;
+	}
+	.pick-box:nth-child(3)::before{
+		content: "";
+		width: 191px;
+		top: -50%;
+		right: 20%;
+		height: 129px;
+		position: absolute;
+		background-image: url("../images/coffe-ball.png");
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+	}
+	.pick-box span{
+		display: flex;
+		justify-content: flex-end;
+		font-weight: 400;
+		font-size: 64px;
+		line-height: 75px;
+		color: #333333;
+		opacity: 0.8;
+	}
+	.pick-box p{
+		padding: 0 8px 20px 0;
+		font-weight: 400;
+		font-size: 18px;
+		line-height: 28px;
+		color: #333333;
+	}
+	.pick-text-box{
+		width: 243px;
+		text-align: left;
+		padding: 45px 0 10px 0;
+		text-transform: uppercase;
+		font-weight: 500;
+		font-size: 40px;
+		line-height: 47px;
+		color: #333333;
+	}
+	.pick-blok-btn{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	.pick-btn{
+		display: inline-block;
+		text-decoration: none;
+		margin: 50px 0 60px 0;
+		padding: 16px 24px;
+		background: #C99B67;
+		border-radius: 100px;
+		font-weight: 500;
+		font-size: 16px;
+		line-height: 19px;
+		text-align: center;
+		letter-spacing: 1px;
+		color: #fff;
+	}
+	footer{
+		width: 100%;
+		background-image: url("../images/footer-bg.jpg");
+		background-size: contain;
+		background-position: center;
+	}
+	.footer-blok{
+		display: flex;
+		justify-content:space-between;
+		align-items: center;
+	}
+	.footer-logo{
+		padding: 68px 0 68px 20px;
+	}
+	.footer-nav{
+		list-style: none;
+		display: flex;
+	}
+	.footer-list:nth-child(2){
+		padding: 0 40px;
+	}
+	.footer-item{
+		text-decoration: none;
+		font-weight: 700;
+		font-size: 16px;
+		line-height: 19px;
+		text-align: center;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		color: #333333;
+	}
+	.social{
+		display: flex;
+		list-style: none;
+		align-items: center;
+	}
+	.socil-item{
+		padding-right: 30px;
+	}
