--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@ body{
 	height: 696px;
 }
 .main-section-text h1{
+	margin: 0;
 	font-weight: 700;
 	font-size: 64px;
 	line-height: 75px;
@@ -414,4 +415,78 @@ body{
 	}
 	.socil-item{
 		padding-right: 30px;
+	}
+	.modal-window{
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display: none;
+		justify-content: center;
+		align-items: center;
+		background: rgba(0, 0, 0, 0.5);
+	}
+	.modal-show{
+		display: flex;
+	}
+	.modal{
+		width: 563px;
+		position: absolute;
+		top: -100%;
+		background: #F8F8F2;
+		animation: anime 1.4s ;
+		animation-fill-mode: forwards;
+	}
+	.modal-text{
+		padding: 19px 0 19px 30px;
+		font-size: 22px;
+		line-height: 52px;
+		text-transform: uppercase;
+		color: #FFFFFF;
+		background: #C99B67;
+	}
+	.modal-title h3{
+		padding:  50px 30px 10px 30px;
+		font-weight: 500;
+		font-size: 24px;
+		line-height: 34px;
+	}
+	.modal-title span{
+		color: #0A775F;
+	}
+	.modal-title p{
+		padding: 0 45px 0 30px;
+		font-weight: 400;
+		font-size: 18px;
+		line-height: 26px;
+		color: #333333;
+		opacity: 0.8;
+	}
+	.modal-number{
+		display: inline-block;
+		padding: 63px 0 64px 30px;
+		font-weight: 500;
+		font-size: 24px;
+		line-height: 28px;
+		color: #000000;
+	}
+	.modal-close-btn{
+		margin: 66px 0 0 212px;
+		padding: 16px 24px;
+		font-weight: 500;
+		font-size: 20px;
+		text-decoration: none;
+		text-transform: uppercase;
+		line-height: 23px;
+		text-align: center;
+		letter-spacing: 1px;
+		color: #FFFFFF;
+		background: #0A775F;
+		border-radius: 100px;
+	}
+	@keyframes anime{
+		100%{
+		top: 23%;
+		}
 	}
